# llms-evaluation

./: .env.sample  .gitignore  README.md
data/: local.py  main.py  ollama.py  openrouter.py  prompt.py  pyproject.toml
score/: main.py  pyproject.toml
